-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b114
-
Verified
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0xf6c1f6f3, pid=30834, tid=30857
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-03-29-114841.zmajo.hs-comp)
# Java VM: Java HotSpot(TM) Server VM (fastdebug 9-internal+0-2016-03-29-114841.zmajo.hs-comp, compiled mode, tiered, g1 gc, linux-x86)
# Problematic frame:
# V [libjvm.so+0xe5d6f3] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool)+0x23
Current CompileTask:
C2: 3156 1367 % b 4 java.lang.StringLatin1::replace @ 13 (196 bytes)
Stack: [0xa20dd000,0xa215e000], sp=0xa215b670, free space=505k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xe5d6f3] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool)+0x23
V [libjvm.so+0xe5f009] LoadNode::convert_to_unsigned_load(PhaseGVN&)+0xe9
V [libjvm.so+0xee8fc4] AndINode::Ideal(PhaseGVN*, bool)+0x3e4
V [libjvm.so+0xff50c4] PhaseIterGVN::transform_old(Node*)+0xb4
V [libjvm.so+0xfef3c1] PhaseIterGVN::optimize()+0x71
V [libjvm.so+0x78c0a0] Compile::Optimize()+0x210
V [libjvm.so+0x78e112] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xff2
V [libjvm.so+0x6088ce] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x36e
V [libjvm.so+0x798672] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x582
V [libjvm.so+0x79949f] CompileBroker::compiler_thread_loop()+0x3cf
V [libjvm.so+0x11a6f5e] compiler_thread_entry(JavaThread*, Thread*)+0x4e
V [libjvm.so+0x11b69c3] JavaThread::thread_main_inner()+0x1d3
V [libjvm.so+0x11b6c58] JavaThread::run()+0x1f8
V [libjvm.so+0xf63ee4] java_start(Thread*)+0x104
C [libpthread.so.0+0x6b5c] start_thread+0xcc
C [libc.so.6+0xf7a5e] clone+0x5e
#
# SIGSEGV (0xb) at pc=0xf6c1f6f3, pid=30834, tid=30857
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-03-29-114841.zmajo.hs-comp)
# Java VM: Java HotSpot(TM) Server VM (fastdebug 9-internal+0-2016-03-29-114841.zmajo.hs-comp, compiled mode, tiered, g1 gc, linux-x86)
# Problematic frame:
# V [libjvm.so+0xe5d6f3] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool)+0x23
Current CompileTask:
C2: 3156 1367 % b 4 java.lang.StringLatin1::replace @ 13 (196 bytes)
Stack: [0xa20dd000,0xa215e000], sp=0xa215b670, free space=505k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xe5d6f3] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool)+0x23
V [libjvm.so+0xe5f009] LoadNode::convert_to_unsigned_load(PhaseGVN&)+0xe9
V [libjvm.so+0xee8fc4] AndINode::Ideal(PhaseGVN*, bool)+0x3e4
V [libjvm.so+0xff50c4] PhaseIterGVN::transform_old(Node*)+0xb4
V [libjvm.so+0xfef3c1] PhaseIterGVN::optimize()+0x71
V [libjvm.so+0x78c0a0] Compile::Optimize()+0x210
V [libjvm.so+0x78e112] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xff2
V [libjvm.so+0x6088ce] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x36e
V [libjvm.so+0x798672] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x582
V [libjvm.so+0x79949f] CompileBroker::compiler_thread_loop()+0x3cf
V [libjvm.so+0x11a6f5e] compiler_thread_entry(JavaThread*, Thread*)+0x4e
V [libjvm.so+0x11b69c3] JavaThread::thread_main_inner()+0x1d3
V [libjvm.so+0x11b6c58] JavaThread::run()+0x1f8
V [libjvm.so+0xf63ee4] java_start(Thread*)+0x104
C [libpthread.so.0+0x6b5c] start_thread+0xcc
C [libc.so.6+0xf7a5e] clone+0x5e
- relates to
-
JDK-8152773 C2: LoadNode properties aren't preserved when converting between signed/unsigned variants
-
- Resolved
-