8152972: C2 crashes with SIGSEGV in LoadNode::make

Reviewed-by: kvn